# scryfall-client

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: ManaCost.rs  card_test.json  color.rs  legality.rs  lib.rs  mana_cost.rs
src/cache/: cache_iterator.rs  io_cache.rs  mod.rs
src/card/: border_color.rs  color.rs  legality.rs  magic_date.rs  magic_set.rs  mana_cost.rs  mod.rs  rarity.rs
src/client/: autocomplete.rs  card_identifier.rs  client_paths.rs  collection.rs  mod.rs  name.rs  random.rs  search.rs  set.rs  sets.rs
src/decklist/: mod.rs  parsers.rs  populated_decklist.rs  unpopulated_decklist.rs
src/search_builder/: artist.rs  block.rs  cmc.rs  collector_number.rs  color.rs  color_identity.rs  devotion.rs  flavor_text.rs  format.rs  include_extras.rs  is.rs  loyalty.rs  magic_type.rs  mana.rs  mod.rs  name.rs  not.rs  or.rs  oracle_text.rs  power.rs  produces.rs  rarity.rs  set.rs  toughness.rs  watermark.rs
src/test/: mod.rs
src/test/cache/: mod.rs
src/test/card/: mana_cost.rs  mod.rs
src/test/client/: mod.rs
src/test/decklist/: mod.rs  polycube
src/test/search_builder/: mod.rs
