[package]
name = "scryfall"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.7"
tokio-test = "0.2.1"
serde_json = "1.0.57"
serde = { version = "1.0.114", features = ["derive"]}
