[package]
name = "scryfall"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.10.7"
tokio-test = "0.2.1"
serde_json = "1.0.57"
serde = { version = "1.0.114", features = ["derive"]}
chrono = { version = "0.4", features = ["serde"] }
Inflector = "0.11.4"
lazy_static = "1.4.0"
macros = {path = "./macros"}

[workspace]
members = [
    "macros",
]
