[package]
name = "scryfall-client"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "an wrapper for the scryfall API"
homepage = "https://github.com/cramt/scryfall-client"
documentation = "https://github.com/cramt/scryfall-client"
repository = "https://github.com/cramt/scryfall-client"
readme = "README.md"

[dependencies]
reqwest = "0.10.8"
tokio-test = "0.2.1"
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"]}
chrono = { version = "0.4", features = ["serde"] }
Inflector = "0.11.4"
lazy_static = "1.4.0"
csv = "1.1"
eyre = "0.6.0"
bincode = "1.3.1"
rayon = "1.4.0"

[workspace]
